--- a/app/src/main/res/layout/activity_search_materia_carrera.xml
+++ b/app/src/main/res/layout/activity_search_materia_carrera.xml
@@ -16,11 +16,9 @@
         android:ems="10"
         android:hint="Busqueda"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/materia1"
         app:layout_constraintEnd_toStartOf="@+id/BotonBuscar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/BotonBuscar"
@@ -28,55 +26,115 @@
         android:layout_height="45dp"
         android:layout_marginTop="76dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="40dp"
         android:text="Search"
-        app:layout_constraintBottom_toTopOf="@+id/materia1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/editTextBusqueda"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/materia1"
-        android:layout_width="241dp"
-        android:layout_height="99dp"
-        android:layout_marginTop="31dp"
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="413dp"
+        android:layout_height="584dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="24dp"
         android:layout_marginBottom="2dp"
-        android:text="Carrera Materia 1"
-        app:layout_constraintBottom_toTopOf="@+id/materia2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextBusqueda" />
-
-    <Button
-        android:id="@+id/materia2"
-        android:layout_width="243dp"
-        android:layout_height="98dp"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="84dp"
-        android:layout_marginBottom="31dp"
-        android:text="Carrera Materia 2"
-        app:layout_constraintBottom_toTopOf="@+id/materia3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/materia1" />
-
-    <Button
-        android:id="@+id/materia3"
-        android:layout_width="245dp"
-        android:layout_height="95dp"
-        android:layout_marginStart="85dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="82dp"
-        android:layout_marginBottom="200dp"
-        android:text="Carrera Materia 3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/materia2" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextBusqueda">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <Button
+                android:id="@+id/materia5"
+                android:layout_width="match_parent"
+                android:layout_height="99dp"
+                android:layout_marginTop="31dp"
+                android:layout_marginBottom="2dp"
+                android:text="Carrera Materia 1"
+                app:layout_constraintBottom_toTopOf="@+id/materia2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+
+            <Button
+                android:id="@+id/materia6"
+                android:layout_width="match_parent"
+                android:layout_height="99dp"
+                android:layout_marginTop="31dp"
+                android:layout_marginBottom="2dp"
+                android:text="Carrera Materia 1"
+                app:layout_constraintBottom_toTopOf="@+id/materia2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+
+            <Button
+                android:id="@+id/materia7"
+                android:layout_width="match_parent"
+                android:layout_height="99dp"
+                android:layout_marginTop="31dp"
+                android:layout_marginBottom="2dp"
+                android:text="Carrera Materia 1"
+                app:layout_constraintBottom_toTopOf="@+id/materia2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+
+            <Button
+                android:id="@+id/materia8"
+                android:layout_width="match_parent"
+                android:layout_height="99dp"
+                android:layout_marginTop="31dp"
+                android:layout_marginBottom="2dp"
+                android:text="Carrera Materia 1"
+                app:layout_constraintBottom_toTopOf="@+id/materia2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+
+            <Button
+                android:id="@+id/materia"
+                android:layout_width="match_parent"
+                android:layout_height="99dp"
+                android:layout_marginTop="31dp"
+                android:layout_marginBottom="2dp"
+                android:text="Carrera Materia 1"
+                app:layout_constraintBottom_toTopOf="@+id/materia2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+
+            <Button
+                android:id="@+id/materia4"
+                android:layout_width="match_parent"
+                android:layout_height="99dp"
+                android:layout_marginTop="31dp"
+                android:layout_marginBottom="2dp"
+                android:text="Carrera Materia 1"
+                app:layout_constraintBottom_toTopOf="@+id/materia2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+
+            <Button
+                android:id="@+id/materia1"
+                android:layout_width="match_parent"
+                android:layout_height="99dp"
+                android:layout_marginTop="31dp"
+                android:layout_marginBottom="2dp"
+                android:text="Carrera Materia 1"
+                app:layout_constraintBottom_toTopOf="@+id/materia2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
