--- a/app/src/main/res/layout/fragment_suggestions.xml
+++ b/app/src/main/res/layout/fragment_suggestions.xml
@@ -9,20 +9,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="116dp"
-        android:text="Enviar"
+        android:text="@string/send"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/suggestionTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
         android:clickable="false"
         android:fontFamily="sans-serif-black"
-        android:text="Sugerencias"
+        android:text="@string/SuggestionsTitle"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -33,7 +33,7 @@
         android:id="@+id/textSuggestions"
         android:layout_width="235dp"
         android:layout_height="332dp"
-        android:hint="Comentenos tus opiniones o sugerencias"
+        android:hint="@string/textSuggestion"
         android:inputType="text"
         android:singleLine="false"
         android:textAlignment="textStart"
@@ -41,19 +41,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498" />
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="62dp"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/send_suggestion" />
+        app:layout_constraintVertical_bias="0.495" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar3"
