--- a/app/src/main/res/layout/activity_atributos_calificar.xml
+++ b/app/src/main/res/layout/activity_atributos_calificar.xml
@@ -124,12 +124,13 @@
 
             <EditText
                 android:id="@+id/Comentarios_reseña"
-                android:layout_width="348dp"
+                android:layout_width="362dp"
                 android:layout_height="183dp"
                 android:ems="10"
+                android:hint="Deja aqui tus comentarios"
                 android:inputType="textPersonName"
-                android:text="            Deja tus comentarios aqui"
-                android:textColor="#22000000" />
+                android:textColor="#000000"
+                android:textSize="18sp" />
 
         </LinearLayout>
 
