--- a/app/src/main/res/layout/activity_resena.xml
+++ b/app/src/main/res/layout/activity_resena.xml
@@ -22,9 +22,9 @@
 
     <TextView
         android:id="@+id/Reseña_titulo"
-        android:layout_width="156dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="32dp"
+        android:layout_width="150dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:text="Materia: "
         android:textColor="#000000"
@@ -56,10 +56,19 @@
         android:id="@+id/Reseña_final"
         android:layout_width="289dp"
         android:layout_height="208dp"
-        android:layout_marginTop="36dp"
-        android:text="TextView"
+        android:layout_marginTop="32dp"
+        android:textColor="#000000"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ratingBar_reseña_final" />
+
+    <TextView
+        android:id="@+id/materia_activity_reseña"
+        android:layout_width="230dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintStart_toEndOf="@+id/Reseña_titulo"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar7" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
