--- a/app/src/main/res/layout/activity_materia.xml
+++ b/app/src/main/res/layout/activity_materia.xml
@@ -98,15 +98,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
-        android:layout_width="383dp"
-        android:layout_height="252dp"
+        android:layout_width="392dp"
+        android:layout_height="251dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nombre_materia5">
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/textView36"
@@ -116,7 +116,7 @@
 
             <RatingBar
                 android:id="@+id/ratingBar"
-                android:layout_width="229dp"
+                android:layout_width="wrap_content"
                 android:layout_height="44dp" />
         </TableRow>
     </ScrollView>
